# ai-recruiter

./: .gitignore  ARCHITECTURE.md  README.md  ai-recruiter-main.ipynb  ai_recruiter.ipynb  gemini-output-1.json  gemini-output-2.json  gemini-output-3.json  main.py  output-schema.json  pyproject.toml  requirements.txt
core/: data.py  email_generator.py  embedding.py  filtering.py  jd_extraction.py  matching.py  normalization.py  pipeline.py  scoring.py
jd/: sample_jd_01.txt
models/: data_models.py  enums.py  mappings.py
prompts/: email_generation.py  jd_extraction.py
tests/: test_eval_pipeline.py  test_matching_pipeline.py
utils/: parsing.py
